[package]
name = "vmml"
version = "1.0.1"
authors = ["phoenixR"]
edition = "2021"
description = "Very Minimal Markup Language"
license = "MIT"
readme = "README.md"
keywords = [
    "language",
    "lightweight",
    "markup",
    "parse",
]
categories = [
    "development-tools",
    "parsing",
]
homepage = "https://docs.rs/vmml/latest/vmml/"
repository = "https://github.com/phoenixr-codes/vmml"

[dependencies]
pest = "2.4"
pest_derive = "2.4"
serde = { version = "1.0.145", features = ["derive"]}
